# PaddleOCR-Torch-Infer

./: .gitignore  README.md  infer.py  infer_video.py  pyproject.toml  requirements.txt
config/: arch_config.yaml  models_config.yml
models/: ch_PP-OCRv3_det_infer.pth
pytorchocr/: base_ocr_v20.py  pytorch_paddle.py
pytorchocr/modeling/architectures/: base_model.py
pytorchocr/modeling/heads/: det_db_head.py
pytorchocr/postprocess/: rec_postprocess.py
utils/: ocr_utils.py  visualize.py
