[project]
name = "torchocrinfer"
version = "0.1.0"
description = "torchocr infer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fasttext-predict==0.9.2.4",
    "loguru==0.7.3",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "pillow==11.2.1",
    "pyclipper==1.3.0.post5",
    "pyyaml==6.0.2",
    "shapely==2.1.1",
    "six==1.16.0",
    "tqdm==4.67.1",
    "torch==2.7.0"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true  

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]